# master-art

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py  models.py  schemas.py  security.py
app/api/: routes.py
app/bot/: main.py
app/services/: ai_assistant.py  concepts.py  creative.py  intake.py  pricing.py  proposal.py
tests/: test_concepts.py  test_pricing.py
webapp/: app.js  index.html  styles.css
