[project]
name = "masterart-ai-sales-bot"
version = "0.1.0"
description = "Professional AI sales bot for MasterArt advertising agency."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.43",
  "asyncpg>=0.30.0",
  "aiosqlite>=0.21.0",
  "pydantic-settings>=2.10.1",
  "aiogram>=3.21.0",
  "httpx>=0.28.1",
  "redis>=6.4.0",
  "python-multipart>=0.0.20",
  "openai>=1.101.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.9",
  "mypy>=1.17.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "webapp*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
